<resources>
    <string name="app_name">Gravador de Áudio 24/7</string>
    <string name="start_recording">Iniciar Gravação</string>
    <string name="stop_recording">Parar Gravação</string>
    <string name="force_upload">Forçar Upload</string>
    <string name="view_logs">Ver Logs</string>
    <string name="settings">Configurações</string>
    <string name="status">Status:</string>
    <string name="recording_active">Gravando...</string>
    <string name="recording_inactive">Gravação Parada</string>
</resources>